OAK-10167: consolidate usage of java 9/10 immutable data structures